fix(ux): fix overflow and borders

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,14 @@
 @tailwind utilities;
 
 @layer base {
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+  }
   * {
     font-family: 'Nunito', sans-serif !important;
   }
